[tool.poetry]
name = "cfets"
version = "0.1.0"
description = ""
authors = ["fzhulitov <fzhulitov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.0"
requests = "^2.28.1"
numpy = "^1.24.1"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

